Fixed footer spacing to match main site

--- a/main.css
+++ b/main.css
@@ -222,8 +222,13 @@ footer {
 	-moz-box-shadow: inset 0 0 10px #ccc;
 	box-shadow: inset 0 0 10px #ccc;
 }
+
+footer h4{
+	margin-bottom:5px
+}
 footer ul li {
 	display: inline-block;
+	line-height: 1.5385em;
 }
 footer ul a {
 	display: block;
